fix test fail 200x200

--- a/src/Canvas/canvas.css
+++ b/src/Canvas/canvas.css
@@ -1,9 +1,11 @@
 .canvas {
   margin: 20px auto;
   border: 2px solid blue;
+  width: 100%;
+  table-layout: fixed;
 }
 
 td {
-  width: 15px;
-  height: 15px;
+  width: 10px;
+  height: 10px;
 }
